--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+		/>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Commissioner:wght@100..900&display=swap"
 			rel="stylesheet"
 		/>
+		<script src="https://telegram.org/js/telegram-web-app.js?57"></script>
 		<title>Vite + Vue + TS</title>
 	</head>
 	<body>
-		<div id="app"></div>
+		<div vaul-drawer-wrapper id="app"></div>
+
 		<script type="module" src="/src/main.ts"></script>
 	</body>
 </html>
